Fixed an issue where horoscope call was http instead of https

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -15,7 +15,7 @@
     }
 
     body {
-        background-image: url('../images/dust_scratches.png');
+        background-image: url('../images/pokeball.jpg');
     }
 }
 
