put search bar in header, changed color, and added footer

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -22,3 +22,12 @@
 .wrapper {
     background-color: 	white;
 }
+
+.footer {
+    padding: 1rem;
+    background-color: #BE202F
+}
+
+.hero {
+    background-color: #BE202F
+}
