--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -12,14 +12,65 @@
         margin-left: auto;
         margin-right: auto;
         width: 960px;
+        position:relative;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       box-shadow:0 6px 128px rgba(0, 0, 0, 0.3), 0 0 72px rgba(0, 0, 0, 0.1);
+    }
+    .wrapper:before, .effect8:after
+{
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:10px;
+    bottom:10px;
+    left:0;
+    right:0;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.wrapper:after
+{
+    right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+
+
+    #sprite{
+        text-align: center;
     }
 
     body {
         background-image: url('../images/pokeball.jpg');
     }
+    #rcorners2 {
+        border-radius: 25px;
+        border: 2px solid rgb(184, 184, 184);
+        padding: 20px;
+        width: auto;
+        margin: 10px;
+        
+      }
 }
+#rcorners2 {
+    border-radius: 25px;
+    border: 2px solid rgb(184, 184, 184);
+    padding: 20px;
+    width: auto;
+    
+  }
+  
 
-.wrapper {
+.wrapper
+{
     background-color: 	white;
 }
 
