cursive be gone!

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -94,17 +94,17 @@
 }
 
 #type {
-    font-family: cursive;
+    font-family: sans-serif;
     font-size: 13px;
 }
 
 #weight {
-    font-family: cursive;
+    font-family: sans-serif;
     font-size: 14px;
 }
 
 #height {
-    font-family: cursive;
+    font-family: sans-serif;
     font-size: 14px;
 }
 
